--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container-titulo">
            <h1>Eleição 2022</h1>
            <p>Vamos ver se você pode votar?</p>
+           <p>Coloque sua idade!</p>
            <div class="container-input">
              <input type="number" id="ipn" >
              <input class="input-submit"  type="submit" value="verificar" id="ipnS" >
